--- a/templates/views/admin/publications.jade
+++ b/templates/views/admin/publications.jade
@@ -26,11 +26,11 @@ block content
                         .jumbotron
                             h3 No Publication Setting found
                             button.btn.btn-success(type='button', data-toggle='modal', data-target='#createPublicationSetting') Create Publication Setting
-                    #createPublicationSetting.modal.fade(tabindex='-1', role='dialog', aria-labelledby='createPublicationSettingLabel', onclick='window.location.reload();')
+                    #createPublicationSetting.modal.fade(tabindex='-1', role='dialog', aria-labelledby='createPublicationSettingLabel')
                         .modal-dialog(role='document')
                             .modal-content
                                 .modal-header
-                                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                    button.close(type='button', data-dismiss='modal', aria-label='Close', onclick='window.location.reload();')
                                         span(aria-hidden='true') ×
                                     h4#createPublicationSettingLabel.modal-title Create a new Publication Setting
                                 .modal-body
