--- a/templates/views/admin/users.jade
+++ b/templates/views/admin/users.jade
@@ -43,7 +43,7 @@ block content
                                         input.form-control(type='text', placeholder='First Name', name='first')
                                     .col-md-6   
                                         label Last Name
-                                        input.form-control(type='text', placeholder='First Name', name='last')
+                                        input.form-control(type='text', placeholder='Last Name', name='last')
                                 .row
                                     .col-md-12
                                         label Email
@@ -67,7 +67,7 @@ block content
                                 .row
                                     .col-sm-6
                                         label Contact Number
-                                        input.form-control(type='text', placeholder='09*********', name='contactNumber')
+                                        input.form-control(type='number', placeholder='09*********', name='contactNumber')
                             .modal-footer                                    
                                 button.btn.btn-primary(type='submit', name='createUser') Create
                                 button.btn.btn-default(type='button', data-dismiss='modal', onclick='window.location.reload();') Close
