--- a/templates/layouts/admin-default.jade
+++ b/templates/layouts/admin-default.jade
@@ -38,7 +38,7 @@ html(lang='en')
                     li 
                         a(href='/admin/settings') Site Settings
                     li
-                        a(href='#') Sign Out
+                        a(href='/keystone/signout') Sign Out
     .container-fluid
         .row    
             .col-sm-3.col-md-2.sidebar
