Reverted eresources page to original multimedia view. Added videos.

--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -48,21 +48,43 @@ block content
                       | #{industry.name} &nbsp;
                       span.badge #{industry.publicationCount}
 
-          .section.col-md-9(style="padding: 10px 16px;")
-            //- .row(style="margin-bottom:1em").blue-black-seperator
-            .section-title.focus.row
-              .title.col-md-5.col-xs-4
-                .skew.col-xs-12
-                .skewed-text Links
+          if links.length > 0
+            .section.col-md-9(style="padding: 10px 16px;")
+              //- .row(style="margin-bottom:1em").blue-black-seperator
+              .section-title.focus.row
+                .title.col-md-5.col-xs-4
+                  .skew.col-xs-12
+                  .skewed-text Links
 
-            .section-content
-              .row
-                each link in links
-                  .col-xs-12.eresources-link
-                    img(src=link._.image.fill(200, 150, {})).image
-                    .data
-                      .title
-                        a(href=link.url) #{link.name}
-                      .description #{link.description}
-                .col-xs-12.more-link
-                  //- a(href="/eresources/links") More Links
+              .section-content
+                .row
+                  each link in links
+                    .col-xs-12.eresources-link
+                      img(src=link._.image.fill(200, 150, {})).image
+                      .data
+                        .title
+                          a(href=link.url) #{link.name}
+                        .description #{link.description}
+                  .col-xs-12.more-link
+                    //- a(href="/eresources/links") More Links
+
+          if videos.length > 0
+            .section.col-md-9(style="padding: 10px 16px;")
+              //- .row(style="margin-bottom:1em").blue-black-seperator
+              .section-title.focus.row
+                .title.col-md-5.col-xs-4
+                  .skew.col-xs-12
+                  .skewed-text Videos
+
+              .section-content
+                .row
+                  each video in videos
+                    .col-xs-12.eresources-video
+                      //- img(src=link._.image.fill(200, 150, {})).image
+                      iframe(width="355", height="200", src="https://www.youtube.com/embed/" + video.url + "?rel=0", frameborder=0, allowfullscreen).video
+                      .data
+                        .title
+                          //- a(href=link.url) #{link.name}
+                        .description #{video.description}
+                  .col-xs-12.more-link
+                    //- a(href="/eresources/links") More Links
