--- a/public/styles/eresources/eresources.less
+++ b/public/styles/eresources/eresources.less
@@ -24,6 +24,22 @@
   margin-bottom: 10px;
 }
 
+.eresources-video .video{
+  float: left;
+  margin-right: 20px;
+}
+
+.eresources-video {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.eresources-video .description {
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
 .more-link {
   margin-top: 20px;
   margin-bottom: 20px;
