--- a/public/styles/community/public-content.less
+++ b/public/styles/community/public-content.less
@@ -58,6 +58,7 @@
     border: 1px solid #E1E1E1;
     box-shadow: 0px 3px 2px #E1E1E1;
     padding: 0;
+    margin-bottom: 20px;
 
     hr {
       margin: 0px 16px 0px 16px;
