Search bar now works

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -16,6 +16,7 @@
   /*background: rgba(48, 48, 48, 1);*/
   margin-bottom: 0px;
   border-radius: 0px;
+  padding: 0px 90.5px 0px 90.5px;
 }
 .navbar-brand{
   padding: 0px;
