--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -5,7 +5,7 @@ block css
 block content
 
   #public-content
-    .container-fluid(style="padding: 80px 90.5px 0px 90.5px;")
+    .container-fluid
       .wrapper
         .row
           //- .section.col-md-12
