--- a/templates/layouts/community.jade
+++ b/templates/layouts/community.jade
@@ -77,10 +77,12 @@ html
 						ul.nav.navbar-nav.navbar-right.links
 							each link in navLinks
 								li: a(href=link.href, class=section == link.key ? 'active' :"not-active")= link.label
-							li: a(class="not-active" onclick="toggleButton()", style="margin-right: 2em;")
-								i.fa.fa-search#toggleIcon
-							//- li: a(href='#', class="not-active")
-							//-   button#versionbutton ALPHA
+							li
+								form(style="margin-top:7px;",method="get",action="/eresources/publications")
+									.input-group(style="width:200px;")
+										input(type="text",name="searchKey",placeholder="Search...").form-control
+										span.input-group-btn
+											button(type="submit").btn.btn-default.form-control Go
 
 
 
