--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -66,7 +66,7 @@ html
 		#header
 			//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
 			//- ... or completely change this header to suit your design.
-		
+
 			div(role="navigation").navbar.navbar-style1.navbar-fixed-top
 				div(style="height:85px; background-color:white;")
 					.navbar-header
@@ -81,7 +81,13 @@ html
 						ul.nav.navbar-nav.navbar-right.links
 							each link in navLinks
 								li: a(href=link.href, class=section == link.key ? 'active' :"not-active")= link.label
-							li: a(class="not-active" onclick="toggleButton()", style="margin-right: 2em;")
+							li
+								form(style="margin-top:7px;",method="get",action="/eresources/publications")
+									.input-group(style="width:200px;")
+										input(type="text",name="searchKey",placeholder="Search...").form-control
+										span.input-group-btn
+											button(type="submit").btn.btn-default.form-control Go
+							//- li: a(class="not-active" onclick="toggleButton()", style="margin-right: 2em;")
 								i.fa.fa-search#toggleIcon
 							//- li: a(href='#', class="not-active")
 							//- 	button#versionbutton ALPHA
@@ -99,7 +105,7 @@ html
 						//- 		li: a(href='/keystone/signout') Sign Out
 						//- 	else
 						//- 		li: a(href='/keystone/signin') Sign In
-	
+
 		//- BODY
 		#body
 
@@ -189,8 +195,8 @@ html
 
 						!= settings.aboutFooter.description
 
-						br 
-						
+						br
+
 						a(href=settings.aboutFooter.logoLink1)
 							img.logos-class(src=settings.aboutFooter.logo1.secure_url)
 						a(href=settings.aboutFooter.logoLink2)
