--- a/templates/layouts/eresources.jade
+++ b/templates/layouts/eresources.jade
@@ -59,27 +59,27 @@ html
     #header
       //- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
       //- ... or completely change this header to suit your design.
-
-      div(role="navigation").navbar.navbar-style1.navbar-fixed-top
-        div(style="height:85px; background-color:white;")
-          .navbar-header
-            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand(href='/')
-              img(src= "/images/dost-pcaarrd-white-logo.png" height="85px" width="470px")
-          .collapse.navbar-collapse
-            ul.nav.navbar-nav.navbar-right.links
-              each link in navLinks
-                li: a(href=link.href, class=section == link.key ? 'active' :"not-active")= link.label
-              li: a(class="not-active" onclick="toggleButton()", style="margin-right: 2em;")
-                i.fa.fa-search#toggleIcon
-              //- li: a(href='#', class="not-active")
-              //-   button#versionbutton ALPHA
-
-
+      .container-fluid
+        div(role="navigation").navbar.navbar-style1.navbar-fixed-top
+          div(style="height:85px; background-color:white;")
+            .navbar-header
+              button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+              a.navbar-brand(href='/')
+                img(src= "/images/dost-pcaarrd-white-logo.png" height="85px" width="470px")
+            .collapse.navbar-collapse
+              ul.nav.navbar-nav.navbar-right.links
+                each link in navLinks
+                  li: a(href=link.href, class=section == link.key ? 'active' :"not-active")= link.label
+                li
+                  form(style="margin-top:7px;",method="get",action="/eresources/publications")
+                    .input-group(style="width:200px;")
+                      input(type="text",name="searchKey",placeholder="Search...").form-control
+                      span.input-group-btn
+                        button(type="submit").btn.btn-default.form-control Go
 
       //- NAVBAR
 
